# mijia-control-skill

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  THIRD_PARTY_NOTICES.md  install.ps1  instructions.md  pyproject.toml  uninstall.ps1
.github/workflows/: release.yml
docs/: architecture.md
evals/: evals.json
mijiactl/: __init__.py  __main__.py  auth.py  capabilities.py  cli.py  client.py  config.py  miot_spec.py  package_skill.py  policy.py  snapshots.py  values.py
references/: device_catalogs.md  safety.md  setup.md
scripts/: build-release.ps1  install-mijiactl.ps1  uninstall-mijiactl.ps1
skills/controlling-mijia-smart-home/: SKILL.md  install.ps1  uninstall.ps1
skills/controlling-mijia-smart-home/references/: device_catalogs.md  safety.md  setup.md
tests/: test_mijiactl_core.py
